--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   provider: ^5.0.0
+  google_fonts: ^4.0.0
   http: ^0.13.5
 
 dev_dependencies:
